# Minicloud

./: .env.example  README.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml
api/: dependencies.py  main.py  schemas.py
api/db/: base.py
api/db/models/: __init__.py  task.py
api/libvirt/: manager.py
api/libvirt/templates/: vm.xml.j2
api/observability/: logging_config.py
api/routes/: __init__.py  auth.py  tasks.py  vms.py
api/workers/tasks/: vm_tasks.py
core/: config.py  exceptions.py  orchestrator.py  security.py
db/: base.py
db/migrations/: env.py
db/migrations/versions/: 001_initial.py
db/models/: __init__.py  event.py  task.py  user.py  vm.py
docker/nginx/: nginx.conf
libvirt/: exceptions.py  manager.py
observability/: logging_config.py  metrics.py
scripts/: init_db.py
tests/: conftest.py
tests/test_api/: test_auth.py  test_tasks.py  test_vms.py
tests/test_core/: test_orchestrator.py
tests/test_libvirt/: test_manager.py
tests/test_workers/: test_vm_tasks.py
workers/: celery_app.py
workers/tasks/: vm_tasks.py
